--- a/Hippo/UIView/TableViewCell/FeedbackTableCell/FeedbackTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/FeedbackTableCell/FeedbackTableViewCell.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="280" id="doU-Q9-Vru" customClass="FeedbackTableViewCell" customModule="SDKDemo1" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="280" id="doU-Q9-Vru" customClass="FeedbackTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="637" height="280"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="doU-Q9-Vru" id="xHQ-1I-Ino">
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BeF-ox-UGV">
-                        <rect key="frame" x="10" y="5" width="547" height="244.5"/>
+                        <rect key="frame" x="45" y="5" width="547" height="244"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please provide feedback by selecting the emojis from below.." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="8HT-2s-iFR">
                                 <rect key="frame" x="8" y="10" width="531" height="54"/>
@@ -137,7 +137,7 @@
                                 </constraints>
                             </view>
                             <button clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9xd-tc-Pxw">
-                                <rect key="frame" x="0.0" y="209.5" width="547" height="35"/>
+                                <rect key="frame" x="0.0" y="209" width="547" height="35"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="hgO-sM-C18"/>
@@ -191,12 +191,21 @@
                             </mask>
                         </variation>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Iem-0k-8v1">
+                        <rect key="frame" x="10" y="219" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="LfW-JP-V3U"/>
+                            <constraint firstAttribute="width" secondItem="Iem-0k-8v1" secondAttribute="height" multiplier="1:1" id="jI5-L7-HIM"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="BeF-ox-UGV" firstAttribute="top" secondItem="xHQ-1I-Ino" secondAttribute="top" constant="5" id="1eD-cd-ic0"/>
-                    <constraint firstItem="BeF-ox-UGV" firstAttribute="leading" secondItem="xHQ-1I-Ino" secondAttribute="leading" constant="10" id="IO4-z5-JQn"/>
+                    <constraint firstItem="Iem-0k-8v1" firstAttribute="leading" secondItem="xHQ-1I-Ino" secondAttribute="leading" constant="10" id="3yU-mv-HHf"/>
+                    <constraint firstItem="BeF-ox-UGV" firstAttribute="leading" secondItem="Iem-0k-8v1" secondAttribute="trailing" constant="5" id="IO3-ww-0Dj"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="BeF-ox-UGV" secondAttribute="bottom" constant="5" id="aLA-Zi-wsC"/>
-                    <constraint firstAttribute="trailing" secondItem="BeF-ox-UGV" secondAttribute="trailing" constant="80" id="sDi-i4-qKR"/>
+                    <constraint firstItem="Iem-0k-8v1" firstAttribute="bottom" secondItem="BeF-ox-UGV" secondAttribute="bottom" id="gB9-Ez-raE"/>
+                    <constraint firstAttribute="trailing" secondItem="BeF-ox-UGV" secondAttribute="trailing" constant="45" id="sDi-i4-qKR"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
@@ -213,14 +222,18 @@
                 <outlet property="constraintSubmitHeight" destination="hgO-sM-C18" id="wMW-u4-edw"/>
                 <outlet property="feedbackDescLabel" destination="pb5-ZI-nic" id="PKR-ta-w2k"/>
                 <outlet property="feedbackSubmittedMessage" destination="L1R-hf-53V" id="yHK-Dx-Ibw"/>
+                <outlet property="feedbackTrailingconstraint" destination="sDi-i4-qKR" id="VR6-an-LUI"/>
                 <outlet property="placeholderLabel" destination="w6d-kM-fBt" id="gki-rl-3Fs"/>
                 <outlet property="ratingImage" destination="6wO-nu-zld" id="eXk-6q-mbC"/>
+                <outlet property="senderImageTraillingConstaints" destination="IO3-ww-0Dj" id="j4p-l9-Aok"/>
+                <outlet property="senderImageView" destination="Iem-0k-8v1" id="fuY-AK-rmy"/>
+                <outlet property="senderImageWidthConstraint" destination="LfW-JP-V3U" id="g8a-gC-OQC"/>
                 <outlet property="submitButton" destination="9xd-tc-Pxw" id="EVf-xS-x01"/>
                 <outlet property="textviewHeightConstraint" destination="JMf-0Y-oan" id="vhu-Nc-Aom"/>
                 <outlet property="titleLabel" destination="8HT-2s-iFR" id="GMX-YR-9Ka"/>
                 <outlet property="verticleLineview" destination="LA0-dS-qPN" id="9jx-v6-nxH"/>
             </connections>
-            <point key="canvasLocation" x="-34.5" y="-75"/>
+            <point key="canvasLocation" x="-36" y="-75.562218890554732"/>
         </tableViewCell>
     </objects>
     <resources>
