--- a/Hippo/UIView/TableViewCell/IncomingDocumentCell/IncomingDocumentTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/IncomingDocumentCell/IncomingDocumentTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wjk-5K-NbM">
-                        <rect key="frame" x="10" y="3" width="277" height="98.5"/>
+                        <rect key="frame" x="46" y="3" width="241" height="98.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ng3-p2-x0o">
-                                <rect key="frame" x="245.5" y="80" width="26.5" height="13.5"/>
+                                <rect key="frame" x="209.5" y="80" width="26.5" height="13.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
@@ -36,10 +36,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="qwz-nn-YTR">
-                                <rect key="frame" x="44" y="28" width="178" height="42.5"/>
+                                <rect key="frame" x="44" y="28" width="142" height="42.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RwS-He-PVv">
-                                        <rect key="frame" x="0.0" y="0.0" width="178" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="142" height="42.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -47,10 +47,10 @@
                                 </subviews>
                             </stackView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="SeE-ss-RbT">
-                                <rect key="frame" x="237" y="39.5" width="20" height="20"/>
+                                <rect key="frame" x="201" y="39.5" width="20" height="20"/>
                             </activityIndicatorView>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="755" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07b-hM-6NS">
-                                <rect key="frame" x="227" y="38.5" width="40" height="22"/>
+                                <rect key="frame" x="191" y="38.5" width="40" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="CLS-CY-8wZ"/>
                                 </constraints>
@@ -60,7 +60,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jjn-HN-HQr">
-                                <rect key="frame" x="10" y="5" width="257" height="18"/>
+                                <rect key="frame" x="10" y="5" width="221" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="q7b-pV-XRO"/>
                                 </constraints>
@@ -142,15 +142,24 @@
                             <constraint firstAttribute="height" constant="25" id="YXk-8s-bjd"/>
                         </constraints>
                     </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2iD-IP-td1">
+                        <rect key="frame" x="10" y="71.5" width="31" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="2iD-IP-td1" secondAttribute="height" multiplier="1:1" constant="1" id="7IC-p1-axS"/>
+                            <constraint firstAttribute="height" constant="30" id="P28-SX-7AR"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="2iD-IP-td1" firstAttribute="leading" secondItem="c6o-Ft-FlH" secondAttribute="leading" constant="10" id="4Xa-PX-Sdf"/>
                     <constraint firstAttribute="bottom" secondItem="wjk-5K-NbM" secondAttribute="bottom" constant="3" id="9dx-a3-e9A"/>
                     <constraint firstItem="cYh-Cb-vMj" firstAttribute="leading" secondItem="wjk-5K-NbM" secondAttribute="trailing" id="AGE-2w-gAI"/>
-                    <constraint firstItem="wjk-5K-NbM" firstAttribute="leading" secondItem="c6o-Ft-FlH" secondAttribute="leading" constant="10" id="CBQ-LC-Bjn"/>
                     <constraint firstItem="r0K-ss-mYR" firstAttribute="leading" secondItem="wjk-5K-NbM" secondAttribute="trailing" id="GQ8-ao-ysB"/>
+                    <constraint firstItem="wjk-5K-NbM" firstAttribute="leading" secondItem="2iD-IP-td1" secondAttribute="trailing" constant="5" id="Her-ZI-4vV"/>
                     <constraint firstItem="r0K-ss-mYR" firstAttribute="width" secondItem="r0K-ss-mYR" secondAttribute="height" multiplier="1:1" id="JM3-xB-Ypc"/>
                     <constraint firstItem="r0K-ss-mYR" firstAttribute="bottom" secondItem="wjk-5K-NbM" secondAttribute="bottom" id="QRQ-ph-nZe"/>
+                    <constraint firstItem="2iD-IP-td1" firstAttribute="bottom" secondItem="wjk-5K-NbM" secondAttribute="bottom" id="Ucp-SE-VKq"/>
                     <constraint firstItem="wjk-5K-NbM" firstAttribute="top" secondItem="c6o-Ft-FlH" secondAttribute="top" constant="3" id="XYw-if-rGJ"/>
                     <constraint firstAttribute="trailing" secondItem="wjk-5K-NbM" secondAttribute="trailing" constant="60" id="ZGh-VB-vTc"/>
                     <constraint firstItem="cYh-Cb-vMj" firstAttribute="centerY" secondItem="wjk-5K-NbM" secondAttribute="centerY" id="kNX-ED-nfb"/>
@@ -165,6 +174,9 @@
                 <outlet property="fileSizeLabel" destination="auz-6M-wZl" id="QZH-8r-KIy"/>
                 <outlet property="nameLabel" destination="jjn-HN-HQr" id="8vP-4G-atM"/>
                 <outlet property="retryButton" destination="07b-hM-6NS" id="kgg-yE-UfZ"/>
+                <outlet property="senderImageTraillingConstaints" destination="Her-ZI-4vV" id="pYX-fy-Qk2"/>
+                <outlet property="senderImageView" destination="2iD-IP-td1" id="lt6-o7-wzx"/>
+                <outlet property="senderImageWidthConstraint" destination="P28-SX-7AR" id="hsH-l3-yxL"/>
                 <outlet property="sourceIcon" destination="r0K-ss-mYR" id="NAV-Ps-ozV"/>
                 <outlet property="timeLabel" destination="ng3-p2-x0o" id="N91-et-jyb"/>
             </connections>
@@ -173,6 +185,6 @@
     </objects>
     <resources>
         <image name="downloadIcon" width="21" height="21"/>
-        <image name="pdf" width="51.200000762939453" height="51.200000762939453"/>
+        <image name="pdf" width="64" height="64"/>
     </resources>
 </document>
