--- a/Hippo/UIView/TableViewCell/SupportMessageTableViewCell/SupportMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/SupportMessageTableViewCell/SupportMessageTableViewCell.xib
@@ -19,11 +19,11 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y0x-5w-qls" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="8.5" y="1.5" width="65" height="62.5"/>
+                        <rect key="frame" x="45" y="1.5" width="65" height="62.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFF-lq-dWC">
-                        <rect key="frame" x="10" y="3" width="62" height="59.5"/>
+                        <rect key="frame" x="46.5" y="3" width="62" height="59.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Pd-1R-qeY">
                                 <rect key="frame" x="30" y="40.5" width="27" height="12"/>
@@ -54,35 +54,48 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aaa-iX-koP">
-                        <rect key="frame" x="72" y="37.5" width="25" height="25"/>
+                        <rect key="frame" x="108.5" y="37.5" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="CjB-J5-0Zt"/>
                             <constraint firstAttribute="width" secondItem="aaa-iX-koP" secondAttribute="height" multiplier="1:1" id="XhK-Ip-cuE"/>
+                        </constraints>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yCk-vg-WaF">
+                        <rect key="frame" x="10" y="33.5" width="30" height="29"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="KcF-sD-6Ms"/>
+                            <constraint firstAttribute="width" secondItem="yCk-vg-WaF" secondAttribute="height" multiplier="1:1" constant="1" id="nZB-TO-IzL"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="RFF-lq-dWC" secondAttribute="trailing" constant="60" id="6DR-L3-Cgb"/>
+                    <constraint firstItem="y0x-5w-qls" firstAttribute="leading" secondItem="yCk-vg-WaF" secondAttribute="trailing" constant="5" id="F7I-iO-Peu"/>
                     <constraint firstItem="aaa-iX-koP" firstAttribute="bottom" secondItem="RFF-lq-dWC" secondAttribute="bottom" id="NBA-M9-2TG"/>
                     <constraint firstItem="y0x-5w-qls" firstAttribute="bottom" secondItem="RFF-lq-dWC" secondAttribute="bottom" constant="1.5" id="QHb-0u-UGp"/>
+                    <constraint firstItem="yCk-vg-WaF" firstAttribute="leading" secondItem="uCR-8L-K0b" secondAttribute="leading" constant="10" id="R3c-wu-nBj"/>
                     <constraint firstItem="y0x-5w-qls" firstAttribute="trailing" secondItem="RFF-lq-dWC" secondAttribute="trailing" constant="1.5" id="WZC-HE-C2b"/>
                     <constraint firstItem="y0x-5w-qls" firstAttribute="top" secondItem="RFF-lq-dWC" secondAttribute="top" constant="-1.5" id="YR2-oe-vpy"/>
                     <constraint firstItem="y0x-5w-qls" firstAttribute="leading" secondItem="RFF-lq-dWC" secondAttribute="leading" constant="-1.5" id="Z3d-am-gjq"/>
                     <constraint firstItem="RFF-lq-dWC" firstAttribute="top" secondItem="uCR-8L-K0b" secondAttribute="top" constant="3" id="cId-bd-9fZ"/>
                     <constraint firstItem="aaa-iX-koP" firstAttribute="leading" secondItem="RFF-lq-dWC" secondAttribute="trailing" id="ilC-2u-jAJ"/>
-                    <constraint firstItem="RFF-lq-dWC" firstAttribute="leading" secondItem="uCR-8L-K0b" secondAttribute="leading" constant="10" id="sc3-oL-NcX"/>
+                    <constraint firstItem="yCk-vg-WaF" firstAttribute="bottom" secondItem="RFF-lq-dWC" secondAttribute="bottom" id="vzv-Gs-RO0"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="bgView" destination="RFF-lq-dWC" id="vc6-Z7-0h6"/>
+                <outlet property="senderImageTraillingConstaints" destination="F7I-iO-Peu" id="F6T-YE-CH9"/>
+                <outlet property="senderImageView" destination="yCk-vg-WaF" id="LTH-Q7-fxb"/>
+                <outlet property="senderImageWidthConstraint" destination="KcF-sD-6Ms" id="F6e-Y7-2JI"/>
                 <outlet property="shadowView" destination="y0x-5w-qls" id="gQ2-Lo-wFc"/>
                 <outlet property="sourceIcon" destination="aaa-iX-koP" id="hWJ-fI-w8m"/>
                 <outlet property="supportMessageTextView" destination="wh8-HF-jZb" id="TOj-FJ-uiw"/>
                 <outlet property="timeLabel" destination="6Pd-1R-qeY" id="FLx-Xc-TRJ"/>
                 <outlet property="topConstraint" destination="cId-bd-9fZ" id="6o0-Cm-pD6"/>
             </connections>
+            <point key="canvasLocation" x="139.85507246376812" y="136.60714285714286"/>
         </tableViewCell>
     </objects>
 </document>
