--- a/Hippo/UIView/TableViewCell/VideoCallMessageTableViewCell/IncomingVideoCallMessageTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/VideoCallMessageTableViewCell/IncomingVideoCallMessageTableViewCell.xib
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingVideoCallMessageTableViewCell" rowHeight="107" id="gHp-v5-Fq8" customClass="IncomingVideoCallMessageTableViewCell" customModule="SDKDemo1" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="IncomingVideoCallMessageTableViewCell" rowHeight="107" id="gHp-v5-Fq8" customClass="IncomingVideoCallMessageTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="621" height="107"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gHp-v5-Fq8" id="9cx-do-cRA">
@@ -19,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Yt-JO-M0w">
-                        <rect key="frame" x="10" y="5" width="202" height="88"/>
+                        <rect key="frame" x="46" y="5" width="202" height="88"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You missed a video call." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="auy-ee-YMf">
                                 <rect key="frame" x="10" y="5" width="182" height="20.5"/>
@@ -77,12 +77,21 @@
                             <constraint firstAttribute="trailing" secondItem="qr3-sy-y90" secondAttribute="trailing" constant="15" id="tLq-iJ-xVd"/>
                         </constraints>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e98-kr-4uI">
+                        <rect key="frame" x="10" y="63" width="31" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Wbu-zI-Ahq"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="2Yt-JO-M0w" firstAttribute="leading" secondItem="e98-kr-4uI" secondAttribute="trailing" constant="5" id="0bL-yZ-T6N"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2Yt-JO-M0w" secondAttribute="bottom" constant="5" id="CLT-Cn-Dph"/>
+                    <constraint firstItem="e98-kr-4uI" firstAttribute="leading" secondItem="9cx-do-cRA" secondAttribute="leading" constant="10" id="IhK-BY-0S4"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2Yt-JO-M0w" secondAttribute="trailing" constant="60" id="SSz-xV-B35"/>
-                    <constraint firstItem="2Yt-JO-M0w" firstAttribute="leading" secondItem="9cx-do-cRA" secondAttribute="leading" constant="10" id="emz-Tv-TE5"/>
+                    <constraint firstItem="e98-kr-4uI" firstAttribute="bottom" secondItem="2Yt-JO-M0w" secondAttribute="bottom" id="VHv-ub-jfp"/>
+                    <constraint firstItem="e98-kr-4uI" firstAttribute="width" secondItem="e98-kr-4uI" secondAttribute="height" multiplier="1:1" constant="1" id="Vzi-Kd-e5z"/>
                     <constraint firstItem="2Yt-JO-M0w" firstAttribute="top" secondItem="9cx-do-cRA" secondAttribute="top" constant="5" id="shU-fv-l3U"/>
                 </constraints>
             </tableViewCellContentView>
@@ -95,6 +104,9 @@
                 <outlet property="messageBackgroundView" destination="2Yt-JO-M0w" id="g1l-mw-oq0"/>
                 <outlet property="messageLabel" destination="auy-ee-YMf" id="f30-7h-TBe"/>
                 <outlet property="retryButtonHeight" destination="1eE-YT-WxG" id="8eO-U1-a31"/>
+                <outlet property="senderImageTraillingConstaints" destination="0bL-yZ-T6N" id="cvN-gF-PIf"/>
+                <outlet property="senderImageView" destination="e98-kr-4uI" id="gsX-M4-jSN"/>
+                <outlet property="senderImageWidthConstraint" destination="Wbu-zI-Ahq" id="RA9-aD-7Ax"/>
             </connections>
             <point key="canvasLocation" x="47.200000000000003" y="-47.226386806596707"/>
         </tableViewCell>
